--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.4.0",
     "dotenv": "^16.0.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
