--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
-    "chart.js": "^4.4.0",
+    "chart.js": "^4.4.1",
     "dotenv": "^16.0.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -24,6 +24,7 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
