--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@mui/material": "^5.15.19",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.0.3",
     "eslint": "8.38.0",
