--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.0.17",
     "@mui/material": "^5.15.19",
     "@tailwindcss/forms": "^0.5.3",
+    "@xyflow/react": "^12.8.2",
     "autoprefixer": "10.4.14",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
