--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "@heroicons/react": "^2.0.17",
     "@mui/material": "^5.15.19",
     "@tailwindcss/forms": "^0.5.3",
-    "@xyflow/react": "^12.8.2",
     "autoprefixer": "10.4.14",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "d3": "^7.9.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.0.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
+    "next": "^15.4.5",
     "next-auth": "^4.22.1",
     "node-cron": "^3.0.3",
     "postcss": "8.4.21",
@@ -38,6 +38,7 @@
     "react-icons": "^4.8.0",
     "react-pdf": "^6.2.2",
     "react-time-picker": "^7.0.0",
+    "reactflow": "^11.11.4",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.1"
   }
